# opencv_test01

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  erozja_dylatacja  greyscale  greyscale.cpp  main.cpp
